# land15

./: .gitignore  README.md
dev/: CMakeLists.txt  cmake_make.bat  cmake_test.bat
dev/src/: CMakeLists.txt  main.cc
dev/src/common/: deleter_ptr.h  random.cc  random.h
dev/src/gfx/: core.h  gfx.cc  gfx.h  image.cc  image.h
dev/src/sdl/: cleanup.cc  cleanup.h
